--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 	<body>
 	<div id="mainbox">
 		<h1>Brain to Brain Interfaces</h1>
-		<br><br><br>
+		<br><br>
 		<p></p>
 		<br><br>
 		<h2>Links:</h2>
 		<br><br>
 		<p id="link"><a href="history.html">Present Technology</a></p><br>
 		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
-		<p id="link">Link</p><br>
-		<p id="link">Link</p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
 		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
 	</div>
 	</body>
