--- a/bibliography.html
+++ b/bibliography.html
@@ -7,8 +7,18 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
+				<div id="sidebar">
+<p id="link"><a href="history.html">Present Technology</a></p><br>
+		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
+		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
+		</div>
 		<div id="mainbox">
-			<p id="back"><a href="index.html" id="back">Back</a></p>
+		<h2>The Application of Brain-Computer Interfaces for Medicine and Communication</h2>
+		<br>
+<!--			<p id="back"><a href="index.html" id="back">Back</a></p>-->
 			<h1>Work Cited</h1>
 			<br>
 			<p>Abdulkader, S. N., Atia, A., & Mostafa, M.-S. M. (2015). Brain computer interfacing:
