--- a/consequences.html
+++ b/consequences.html
@@ -7,8 +7,18 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<div id="sidebar">
+<p id="link"><a href="history.html">Present Technology</a></p><br>
+		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
+		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
+		</div>
 		<div id="mainbox">
-			<p id="back"><a href="index.html" id="back">Back</a></p>
+			<h2>The Application of Brain-Computer Interfaces for Medicine and Communication</h2>
+		<br>
+<!--			<p id="back"><a href="index.html" id="back">Back</a></p>-->
 			<h1>Consequences</h1>
 			<br>
 			<p>The primary consequences for BCI are ethical. The first category that Trimper et al. (2014) states the “neural privacy” of an individual could be compromised. There is no private thinking with one’s cerebral information since one’s brain impulses are continuously monitored by a computer (Trimper et al., 2014). Potiental hacking could occur on one's brain. In addition, the brain-to-brain interface has currently no way of rejecting information it receives, meaning that it could be a potential outlet for mind control (Trimper et al., 2014). </p>
