--- a/history.html
+++ b/history.html
@@ -6,8 +6,18 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<div id="sidebar">
+<p id="link"><a href="history.html">Present Technology</a></p><br>
+		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
+		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
+		</div>
 		<div id="mainbox">
-			<p id="back"><a href="index.html" id="back">Back</a></p>
+			<h2>The Application of Brain-Computer Interfaces for Medicine and Communication</h2>
+		<br>
+<!--			<p id="back"><a href="index.html" id="back">Back</a></p>-->
 			<h1>Present Technology</h1>
 			<br>
 			<p>Currently, scientists are able to play simple games such as tetris and send <i>yes</i> or <i>no</i> signals as information between two brains (Jiang et al., 2019).  The signals are transmitted using Transcranial Magnetic Stimulation, which causes an action potential using a magnetic field (Hallett, 2000).  The signals on the receiver brain can interpret the signals as phosphenes, or hallucinations of light, to determine what to in the game (Jiang et al., 2019). </p>
