--- a/history2.html
+++ b/history2.html
@@ -6,8 +6,18 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
+			<div id="sidebar">
+<p id="link"><a href="history.html">Present Technology</a></p><br>
+		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
+		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
+		</div>
 		<div id="mainbox">
-			<p id="back"><a href="index.html" id="back">Back</a></p>
+<!--			<p id="back"><a href="index.html" id="back">Back</a></p>-->
+			<h2>The Application of Brain-Computer Interfaces for Medicine and Communication</h2>
+		<br>
 			<h1>History</h1>
 			<br>
 			<p>The big discoverty with brain mapping occured with Hans Berger's work with the human brain. Moreover, the creation of electroencephalography can be credited to Berger (“History of Brain Computer Interfaces,” 2014). </p><br><p>Another huge year for brain mapping was 1988. This is where Philip Kennedy implanted the first brain computer implanted object into a human(“History of Brain Computer Interfaces”). The only positive outcome of the implant was the use of a wireless di-electrode.</p><br>
