--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
 		<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
 	</head>
 	<body>
+		<div id="sidebar">
+<p id="link"><a href="history.html">Present Technology</a></p><br>
+		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
+		<p id="link"><a href="history2.html">History</a></p><br>
+		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
+		<p id="link"><a href="consequences.html">Consequences</a></p><br>
+		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
+		</div>
+<!--
 	<div id="mainbox">
-		<h1>Brain to Brain Interfaces</h1>
-		<br><br>
+		<br>
+		<h1>The Application of Brain-Computer Interfaces for Medicine and Communication</h1>
+		<br>
 		<p></p>
 		<br><br>
+-->
+<!--
 		<h2>Links:</h2>
 		<br><br>
 		<p id="link"><a href="history.html">Present Technology</a></p><br>
@@ -20,6 +32,7 @@
 		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
 		<p id="link"><a href="consequences.html">Consequences</a></p><br>
 		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
-	</div>
+-->
+<!--	</div>-->
 	</body>
 </html>
