--- a/breakthroughs.html
+++ b/breakthroughs.html
@@ -32,6 +32,7 @@ https://computer.howstuffworks.com/brain-computer-interface1.htm
 			<p>Usability: The current technology requires a copious amount of training from subjects in order to be used (Abdulkader et al., 2015).</p>
 			<br>
 			<p>Interpretation of signals: Since the properties and functions of the brain are not fully understood, many of the signals emitted by the brain may not be understood by a BCI and the millions of signals occur simultaneously, making them hard to interpret (Abdulkader et al., 2015).  Furthermore, there is a limited amount of electrodes (which is in the hundreds) and it cannot record the billions of signals occurring at once (Corbyn, 2019).</p><br>
+			<img src="images/breakthrough1.png">
 			<p>Corrosion of electrodes: Electrodes will damage over time due to the scarring of tissue caused by the implant in the area (Corbyn, 2019). </p><br>
 			<p>Outside factors: Factors such as the emotional state and fatigue of a subject can disrupt the signals sent to a BCI (Abdulkader et al., 2015).  Even eye movements can cause interference with the signals recorded by electrodes (Abdulkader et al., 2015).  </p><br>
 		</div>
