--- a/index.html
+++ b/index.html
@@ -15,24 +15,10 @@
 		<p id="link"><a href="consequences.html">Consequences</a></p><br>
 		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
 		</div>
-<!--
 	<div id="mainbox">
-		<br>
 		<h1>The Application of Brain-Computer Interfaces for Medicine and Communication</h1>
 		<br>
-		<p></p>
-		<br><br>
--->
-<!--
-		<h2>Links:</h2>
-		<br><br>
-		<p id="link"><a href="history.html">Present Technology</a></p><br>
-		<p id="link"><a href="breakthroughs.html">Breakthroughs</a></p><br>
-		<p id="link"><a href="history2.html">History</a></p><br>
-		<p id="link"><a href="designProcess.html">Design Process</a></p><br>
-		<p id="link"><a href="consequences.html">Consequences</a></p><br>
-		<p id="link"><a href="bibliography.html">Bibliography</a></p><br>
--->
-<!--	</div>-->
+	<img src="images/frontpage.jpg">
+	</div>
 	</body>
 </html>
