--- a/history.html
+++ b/history.html
@@ -22,17 +22,14 @@
 			<br>
 			<p>Currently, scientists are able to play simple games such as tetris and send <i>yes</i> or <i>no</i> signals as information between two brains (Jiang et al., 2019).  The signals are transmitted using Transcranial Magnetic Stimulation, which causes an action potential using a magnetic field (Hallett, 2000).  The signals on the receiver brain can interpret the signals as phosphenes, or hallucinations of light, to determine what to in the game (Jiang et al., 2019). </p>
 			<br>
-			<p>In addition, researchers at Duke University have been able to make rats communicate wirelessly in isolated locations in order to perform simple tasks such as pulling a the right lever to get water as a reward (Pais-Vieira et al., 2013).  The information of what one rat learned would be based on trial and error would be transmitted to a second rat, which could use the given information to make the correct decision (Pais-Vieira et al., 2013).  According to Pais-Vieira et al. (2013), the rat receiving the information had around a “78.877%” success rate in making the correct response based on information that came from the first rat and had better performance than if the rats were doing the activity independently.</p><br><br>
-<!--
-						<img src="images/PT1.png" class="PT1">
-			<p id="citation">Jiang, L., Stocco, A., Losey, D. M., Abernethy, J. A., Prat, C. S., & Rao, R. P. N. (2019).
-BrainNet: A Multi-Person Brain-to-Brain Interface for Direct Collaboration Between Brains. Scientific Reports, 9(1). doi: 10.1038/s41598-019-41895-7
-			</p>
-			<img src="images/PT1B.png" class="PT2">
-			<p id="citation">Pais-Vieira, M., Lebedev, M., Kunicki, C., Wang, J., & Nicolelis, M. A. L. (2013). A
-Brain-to-Brain Interface for Real-Time Sharing of Sensorimotor Information. Scientific Reports, 3(1). doi: 10.1038/srep01319
-</p>
--->
+			<img src="images/PresentTechnology2.png">
+			<br>
+			<p>In addition, researchers at Duke University have been able to make rats communicate wirelessly in isolated locations in order to perform simple tasks such as pulling a the right lever to get water as a reward (Pais-Vieira et al., 2013).  The information of what one rat learned would be based on trial and error would be transmitted to a second rat, which could use the given information to make the correct decision (Pais-Vieira et al., 2013).  According to Pais-Vieira et al. (2013), the rat receiving the information had around a “78.877%” success rate in making the correct response based on information that came from the first rat and had better performance than if the rats were doing the activity independently.</p><br>
+			Andrea Stocco and Rajesh Rao were able to create a human brain-to-brain interface where Rao successfully transferred a brain pulse to Stocco (Armstrong & Ma, 2013).
+<p>Dr. Rao, one of the scientists working on the project, put on electrodes going from his cap to an “electroencephalography machine” (EEG) which monitors brain activity while his co-worker was on the other side of the campus with a cap fixed over “his left motor cortex,” which is responsible for "hand movement" (Armstrong & Ma, 2013). He used his mind to control his co-worker’s hand as they played a simple video game together that involved shooting a “cannon at a target” (Armstrong & Ma, 2013).</p><br>
+			<img src="images/PresentTechnology1.png">
+			<br>
+			<br>
 		</div>
 	</body>
 </html>
