--- a/consequences.html
+++ b/consequences.html
@@ -21,7 +21,8 @@
 <!--			<p id="back"><a href="index.html" id="back">Back</a></p>-->
 			<h1>Consequences</h1>
 			<br>
-			<p>The primary consequences for BCI are ethical. The first category that Trimper et al. (2014) states the “neural privacy” of an individual could be compromised. There is no private thinking with one’s cerebral information since one’s brain impulses are continuously monitored by a computer (Trimper et al., 2014). Potiental hacking could occur on one's brain. In addition, the brain-to-brain interface has currently no way of rejecting information it receives, meaning that it could be a potential outlet for mind control (Trimper et al., 2014). </p>
+			<p>The primary consequences for BCI are ethical. The first category that Trimper et al. (2014) states the “neural privacy” of an individual could be compromised. There is no private thinking with one’s cerebral information since one’s brain impulses are continuously monitored by a computer (Trimper et al., 2014). Potiental hacking could occur on one's brain. In addition, the brain-to-brain interface has currently no way of rejecting information it receives, meaning that it could be a potential outlet for mind control (Trimper et al., 2014). </p><br>
+			<img src="images/Consequences1.png"><br>
 		</div>
 	</body>
 </html>
